# clique-home-assignment

./: .gitignore  README.md  cli.py  pyproject.toml
checkin_tool/: eligibility.py  loader.py  models.py  recommender.py  scoring.py
data/: holidays.json  last_contacts.csv  members.csv
draft/: README.md  cli.py  pyproject.toml
tests/: test_eligibility.py  test_recommender.py  test_scoring.py
