[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "checkin"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["checkin_tool"]
py-modules = ["cli"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
checkin = "cli:main"
